--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -36,6 +36,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.3",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "sonner": "^2.0.3",
     "streamifier": "^0.1.1",
     "tailwind-merge": "^3.2.0",
