--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/vite": "^4.1.5",
     "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
+    "backend": "file:../..",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
